--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 
                 <div class="contact_content">
                     <h3 class="contact_title">Envíame tú Propuesta/Proyecto</h3>
-                    <form action="" class="contact_form">
+                    <form action="https://formspree.io/f/mrgdgraj" method="POST" class="contact_form">
 
                         <div class="contact_form-div">
                             <label for="" class="contact_form-tag">Nombre</label>
