Some details added

--- a/index.html
+++ b/index.html
@@ -608,17 +608,17 @@
 
                         <div class="contact_form-div">
                             <label for="" class="contact_form-tag">Nombre</label>
-                            <input type="text" placeholder="Ingresa tú nombre" class="contact_form-input" required>
+                            <input type="text" name="Nombre" placeholder="Ingresa tú nombre" class="contact_form-input" required>
                         </div>
 
                         <div class="contact_form-div">
                             <label for="" class="contact_form-tag">Email</label>
-                            <input type="email" placeholder="Ingresa tú correo" class="contact_form-input" required>
+                            <input type="email" name="Email" placeholder="Ingresa tú correo" class="contact_form-input" required>
                         </div>
 
                         <div class="contact_form-div contact_form-area">
                             <label for="" class="contact_form-tag">Proyecto, propuesta, consejo</label>
-                            <textarea name="" id="" cols="30" rows="10" placeholder="Describe tú mensaje" class="contact_form-input" required></textarea>
+                            <textarea name="Message" id="" cols="30" rows="10" placeholder="Describe tú mensaje" class="contact_form-input" required></textarea>
                         </div>
 
                         <button class="button">Enviar Mensaje</button>
