Add Blog page to principal source

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                     <img src="images/project_4.jpg" alt="" class="work_img">
                     <h3 class="work_title">Blog</h3>
 
-                    <a href="#" class="work_button">
+                    <a href="https://juan10024.github.io/Blog/Source/" class="work_button">
                         Demo <i class='bx bxs-right-arrow-square work_icon'></i>
                     </a>
                 </div>
