--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- link CSS -->
     <link rel="stylesheet" href="css/styles.css"> 
 
-    <title>Personal Portfolio JD</title>
+    <title>Juan Valderrama Portfolio</title>
 
 </head>
 <body>
@@ -28,7 +28,7 @@
     <!-- section header starts -->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav_logo">Daniel</a>
+            <a href="#" class="nav_logo">Juan D.</a>
             <div class="nav_menu">
                <ul class="nav_list">
                     <!-- home logo -->
@@ -83,9 +83,9 @@
         <section class="home section" id="home">
             <div class="home_container container grid">
                 <div class="home_data">
-                    <span class="home_greeting">Hola, mucho gusto, mi nombre es</span> 
+                    <span class="home_greeting">Hi, welcome, i´m</span> 
                     <h1 class="home_name">Juan Daniel Valderrama</h1>
-                    <h3 class="home_education">Full <span class="typing-text">Stack Developer</span></h3>
+                    <h3 class="home_education">Data <span class="typing-text">Analyst</span></h3>
 
                     <div class="home_buttons">
                         <a download="" href="HCV Juan Daniel.pdf" class="button button--ghost">
