--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
         <section class="home section" id="home">
             <div class="home_container container grid">
                 <div class="home_data">
-                    <span class="home_greeting">Hi, welcome, i´m</span> 
+                    <span class="home_greeting">Hi, welcome, I´m</span> 
                     <h1 class="home_name">Juan Daniel Valderrama</h1>
                     <h3 class="home_education">Data <span class="typing-text">Analyst</span></h3>
 
                     <div class="home_buttons">
-                        <a download="" href="HCV Juan Daniel.pdf" class="button button--ghost">
-                            Descargar CV
+                        <a download="" href="CV_Juan_Valderrama.pdf" class="button button--ghost">
+                            Download CV
                         </a>
-                        <a href="#about" class="button">Acerca de mí</a>
+                        <a href="#about" class="button">About</a>
                     </div>
                 </div>
 
@@ -116,7 +116,7 @@
                 </div>
                 <a href="#contact" class="home_scroll">
                     <i class="bx bx-mouse-alt home_scroll_icon"></i>
-                    <span class="home_scroll-name">Hacía Abajo</span>
+                    <span class="home_scroll-name">Down</span>
                 </a>
 
             </div>
