Final index.html

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <div class="services_card">
                     <h3 class="services_title">Advanced Analytical <br> Solutions</h3>
                     <span class="services_button">
-                        Ver más <i class='bx bxs-right-arrow-circle services_icon'></i>
+                        View more <i class='bx bxs-right-arrow-circle services_icon'></i>
                     </span> 
                     <div class="services_modal">
                         <div class="services_modal-content">
@@ -351,7 +351,7 @@
                 <div class="services_card">
                     <h3 class="services_title">Implement AI <br> Solutions </h3>  
                     <span class="services_button">
-                        Ver más <i class='bx bxs-right-arrow-circle services_icon'></i>
+                        View more <i class='bx bxs-right-arrow-circle services_icon'></i>
                     </span> 
 
                     <div class="services_modal">
@@ -395,7 +395,7 @@
                 <div class="services_card">
                     <h3 class="services_title">Strong Mathematics <br>/ Statistics </h3>
                     <span class="services_button">
-                        Ver más <i class='bx bxs-right-arrow-circle services_icon'></i>
+                        View more <i class='bx bxs-right-arrow-circle services_icon'></i>
                     </span> 
 
                     <div class="services_modal">
@@ -516,8 +516,7 @@
 
                         <h3 class="studies_name">Java Programming Advanced</h3>
                         <p class="studies_description">
-                            Intensive offered by Oracle-Academy, participate in the selection process carried out by the government, 
-                            through minTic, being worthy of a place for the learning route: Java Fundamentals (90h) 
+                            Intensive offered by Oracle-Academy, being worthy of a place for the learning route: Java Fundamentals (90h) 
                             - Java Foundations (90h) - Java Programming (90h) . 
                         </p>
                     </div>
@@ -612,7 +611,7 @@
                             <textarea name="Message" id="" cols="30" rows="10" placeholder="Describe your project or proposal" class="contact_form-input" required></textarea>
                         </div>
 
-                        <button class="button">Enviar Mensaje</button>
+                        <button class="button">Send Message</button>
 
                     </form>
 
@@ -627,18 +626,18 @@
     <!-- Sections Footer starts -->
     <footer class="footer">
         <div class="footer_container container">
-            <h1 class="footer_title">Juan Daniel</h1>
+            <h1 class="footer_title">Juan Valderrama</h1>
             <ul class="footer_list">
                 <li>
-                    <a href="#about" class="footer_link">Acerca de mí</a>
+                    <a href="#about" class="footer_link">About</a>
                 </li>
 
                 <li>
-                    <a href="#work" class="footer_link">Proyectos</a>
+                    <a href="#work" class="footer_link">Projects</a>
                 </li>
 
                 <li>
-                    <a href="#skills" class="footer_link">Mis Conocimientos</a>
+                    <a href="#skills" class="footer_link">My Knowledge</a>
                 </li>
             </ul>
             
@@ -657,7 +656,7 @@
             </ul>
 
             <span class="footer_copy">&copy; COPYRIGHT @ 2022 by
-                Juan Daniel. Todos los derechos reservados.
+                Juan Daniel. All rights reserved.
             </span>
         </div>
     </footer>
