--- a/index.html
+++ b/index.html
@@ -516,8 +516,8 @@
 
                         <h3 class="studies_name">Java Programming Advanced</h3>
                         <p class="studies_description">
-                            Intensive offered by Oracle-Academy, being worthy of a place for the learning route: Java Fundamentals (90h) 
-                            - Java Foundations (90h) - Java Programming (90h) . 
+                            Intensive offered by Oracle-Academy, being worthy of a place for the learning route: Java Fundamentals 
+                            - Java Foundations - Java Programming. 
                         </p>
                     </div>
 
@@ -527,7 +527,7 @@
                         <h3 class="studies_name">Master Advanced Excel</h3>
                         <p class="studies_description">
                             Learning path offered by Linkedln Learning, deep dive into Excel VBA, 
-                            charts, Power Query and macros.
+                            charts, Power Query and always seeking improvement in management.
                         </p>
                     </div>
 
