--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="home_handle">
-                    <img src="images/myphoto.png" alt="" class="home_img">
+                    <img src="images/Anime_photo_Juan.jpg" alt="" class="home_img">
                 </div>
                 <div class="home_social">
 
@@ -129,7 +129,7 @@
             <span class="section_subtitle">Cover letter</span>
             <h2 class="section_title">About me</h2>
             <div class="about_container container grid">
-                <img src="images/second_photo.jpg" alt="Hombre Joven" class="about_img">
+                <img src="images/photo_profile.png" alt="Hombre Joven" class="about_img">
 
                 <div class="about_data">
                     <div class="about_info">
