--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <span class="section_subtitle">Cover letter</span>
             <h2 class="section_title">About me</h2>
             <div class="about_container container grid">
-                <img src="images/photo_profile.png" alt="Hombre Joven" class="about_img">
+                <img src="images/photo_profile_Juan.png" alt="Hombre Joven" class="about_img">
 
                 <div class="about_data">
                     <div class="about_info">
