Update Anime Photo Juan to png

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="home_handle">
-                    <img src="images/Anime_photo_Juan.jpg" alt="" class="home_img">
+                    <img src="images/Anime_photo_Juan.png" alt="" class="home_img">
                 </div>
                 <div class="home_social">
 
