Add more Works.html

--- a/index.html
+++ b/index.html
@@ -446,41 +446,41 @@
 
             <div class="work_filters">
                 <span class="work_item active_work" data-filter='all'>All</span>
-                <span class="work_item " data-filter='.web'>Visualization</span>
-                <span class="work_item " data-filter='.design'>Analytics</span>
-                <span class="work_item " data-filter='.blog'>ML</span>
+                <span class="work_item " data-filter='.visual'>Visualization</span>
+                <span class="work_item " data-filter='.analy'>Analytics</span>
+                <span class="work_item " data-filter='.ml'>ML</span>
             </div>
 
             <div class="work_container container grid">
 
-                <div class="work_card mix design">
+                <div class="work_card mix visual">
                     <img src="images/project 1.jpg" alt="" class="work_img">
-                    <h3 class="work_title">Visualization</h3>
+                    <h3 class="work_title">Social App Data Mining</h3>
 
-                    <a href="#" class="work_button">
+                    <a href="https://juandanielchillsocialapp.netlify.app/" class="work_button">
                         Demo <i class='bx bxs-right-arrow-square work_icon'></i>
                     </a>
                 </div>
 
-                <div class="work_card mix web">
+                <div class="work_card mix visual">
                     <img src="images/project 2.jpg" alt="" class="work_img">
-                    <h3 class="work_title">Analytics</h3>
+                    <h3 class="work_title">Youtube Clone Data Mining</h3>
 
-                    <a href="#" class="work_button">
+                    <a href="https://juandanielyoutubeclone.netlify.app/" class="work_button">
                         Demo <i class='bx bxs-right-arrow-square work_icon'></i>
                     </a>
                 </div>
 
-                <div class="work_card mix design">
+                <div class="work_card mix analy">
                     <img src="images/project_3.jpg" alt="" class="work_img">
-                    <h3 class="work_title">ML</h3>
+                    <h3 class="work_title">Data Operations Analytics</h3>
 
                     <a href="#" class="work_button">
                         Demo <i class='bx bxs-right-arrow-square work_icon'></i>
                     </a>
                 </div>
 
-                <div class="work_card mix blog">
+                <div class="work_card mix all">
                     <img src="images/project_4.jpg" alt="" class="work_img">
                     <h3 class="work_title">Blog</h3>
 
