Add open in a new tab

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                     <img src="images/project 1.jpg" alt="" class="work_img">
                     <h3 class="work_title">Social App Data Mining</h3>
 
-                    <a href="https://juandanielchillsocialapp.netlify.app/" class="work_button">
+                    <a href="https://juandanielchillsocialapp.netlify.app/" target="_blank" class="work_button">
                         Demo <i class='bx bxs-right-arrow-square work_icon'></i>
                     </a>
                 </div>
@@ -466,7 +466,7 @@
                     <img src="images/project 2.jpg" alt="" class="work_img">
                     <h3 class="work_title">Youtube Clone Data Mining</h3>
 
-                    <a href="https://juandanielyoutubeclone.netlify.app/" class="work_button">
+                    <a href="https://juandanielyoutubeclone.netlify.app/" target="_blank" class="work_button">
                         Demo <i class='bx bxs-right-arrow-square work_icon'></i>
                     </a>
                 </div>
@@ -475,7 +475,7 @@
                     <img src="images/project_3.jpg" alt="" class="work_img">
                     <h3 class="work_title">Data Operations Analytics</h3>
 
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiN2VjYzI3NjMtMzViMC00N2IzLTgxMzYtOWIzZmY0MDYxYjYxIiwidCI6IjA0NmNhMmYwLWFhZjgtNDE5MC04M2FjLWUyNDRhMDgzOGUxNSIsImMiOjR9&embedImagePlaceholder=true" class="work_button">
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiN2VjYzI3NjMtMzViMC00N2IzLTgxMzYtOWIzZmY0MDYxYjYxIiwidCI6IjA0NmNhMmYwLWFhZjgtNDE5MC04M2FjLWUyNDRhMDgzOGUxNSIsImMiOjR9&embedImagePlaceholder=true" target="_blank" class="work_button">
                         Demo <i class='bx bxs-right-arrow-square work_icon'></i>
                     </a>
                 </div>
@@ -484,7 +484,7 @@
                     <img src="images/project_4.jpg" alt="" class="work_img">
                     <h3 class="work_title">Blog</h3>
 
-                    <a href="https://juan10024.github.io/Blog/Source/" class="work_button">
+                    <a href="https://juan10024.github.io/Blog/Source/" target="_blank" class="work_button">
                         Demo <i class='bx bxs-right-arrow-square work_icon'></i>
                     </a>
                 </div>
