--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                 </div>
 
                 <div class="work_card mix visual">
-                    <img src="images/project_3.jpg" alt="" class="work_img">
+                    <img src="images/Car_Project.png" alt="" class="work_img">
                     <h3 class="work_title">Car Sales Report</h3>
 
                     <a href="https://app.powerbi.com/view?r=eyJrIjoiMWI2ZWRhZjUtZGRiZS00ZjE2LTlmMDgtOTNmNjExNjMwM2VhIiwidCI6IjA0NmNhMmYwLWFhZjgtNDE5MC04M2FjLWUyNDRhMDgzOGUxNSIsImMiOjR9&embedImagePlaceholder=true" target="_blank" class="work_button">
