Upload photos about projects

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
             <div class="work_container container grid">
 
                 <div class="work_card mix visual">
-                    <img src="images/project 1.jpg" alt="" class="work_img">
+                    <img src="images/Social_App.png" alt="" class="work_img">
                     <h3 class="work_title">Social App Data Mining</h3>
 
                     <a href="https://juandanielchillsocialapp.netlify.app/" target="_blank" class="work_button">
@@ -463,7 +463,7 @@
                 </div>
 
                 <div class="work_card mix visual">
-                    <img src="images/project 2.jpg" alt="" class="work_img">
+                    <img src="images/YT_Clone.png" alt="" class="work_img">
                     <h3 class="work_title">Youtube Clone Data Mining</h3>
 
                     <a href="https://juandanielyoutubeclone.netlify.app/" target="_blank" class="work_button">
@@ -472,7 +472,7 @@
                 </div>
 
                 <div class="work_card mix analy">
-                    <img src="images/project_3.jpg" alt="" class="work_img">
+                    <img src="images/Data_Visualization.png" alt="" class="work_img">
                     <h3 class="work_title">Data Operations Analytics</h3>
 
                     <a href="https://app.powerbi.com/view?r=eyJrIjoiN2VjYzI3NjMtMzViMC00N2IzLTgxMzYtOWIzZmY0MDYxYjYxIiwidCI6IjA0NmNhMmYwLWFhZjgtNDE5MC04M2FjLWUyNDRhMDgzOGUxNSIsImMiOjR9&embedImagePlaceholder=true" target="_blank" class="work_button">
